rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__folder-with-enum-attribute__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Folder
  class: Folder
  properties:
    Attributes:
      Attributes:
        AnEnumValue:
          EnumItem:
            type: Material
            value: 512
    Capabilities:
      SecurityCapabilities: 0
    Sandboxed:
      Bool: false
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
  children: []
